Bug 1204405: Don't access prefs off main thread in testing ProcessLink::Open(). r=khuey